--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 80px;
     padding: 10px;
-    background-color: gray;
+    background-color: rgba(10, 159, 104, 0.95);
 
     &__inner {
         display: flex;
