--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,10 +3,22 @@ html, body {
     margin: 0;
 }
 
+body {
+    background-color: #f8f8f8;
+}
+
 body > div {
     height: 100%;
 }
 
 * {
     box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
+
+:root {
+    --playerHeight: 80px;
 }
